[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/ui/window_theme.tres" type="Theme" id=1]
[ext_resource path="res://assets/ui/window_border.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/example_info.png" type="Texture" id=3]
[ext_resource path="res://scenes/ui/ItemAcquisition.gd" type="Script" id=4]
[ext_resource path="res://scenes/ui/SelectionList.tscn" type="PackedScene" id=5]

[node name="ItemAcquisition" type="NinePatchRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -104.0
margin_top = -88.0
margin_right = 104.0
margin_bottom = 88.0
theme = ExtResource( 1 )
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 24, 24 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
script = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0

[node name="Title" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
margin_right = 192.0
margin_bottom = 16.0
text = "New ??? Acquired!
"
align = 1
uppercase = true

[node name="ItemName" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
margin_top = 16.0
margin_right = 192.0
margin_bottom = 24.0
text = "\"Item Name\""
align = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
show_behind_parent = true
margin_top = 24.0
margin_right = 192.0
margin_bottom = 32.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 32.0
margin_right = 192.0
margin_bottom = 128.0
size_flags_vertical = 3

[node name="ItemImage" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_right = 64.0
margin_bottom = 96.0
texture = ExtResource( 3 )

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
margin_left = 64.0
margin_right = 72.0
margin_bottom = 96.0

[node name="ItemDescriptionContainer" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_left = 72.0
margin_right = 192.0
margin_bottom = 96.0
size_flags_horizontal = 3

[node name="ItemDescription" type="Label" parent="VBoxContainer/HBoxContainer/ItemDescriptionContainer"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_right = -8.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Item description"
autowrap = true

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
show_behind_parent = true
margin_top = 128.0
margin_right = 192.0
margin_bottom = 136.0

[node name="OkSelection" parent="VBoxContainer" instance=ExtResource( 5 )]
unique_name_in_owner = true
margin_top = 136.0
margin_right = 192.0
margin_bottom = 160.0
rect_min_size = Vector2( 0, 24 )
active = true
items = PoolStringArray( "Ok!" )
